RESOLVED FIXED185355
DFG AI doesn't need to merge valuesAtTail - it can just assign them
https://bugs.webkit.org/show_bug.cgi?id=185355
Summary DFG AI doesn't need to merge valuesAtTail - it can just assign them
Filip Pizlo
Reported 2018-05-05 12:14:01 PDT
Patch forthcoming.
Attachments
the patch (2.39 KB, patch)
2018-05-05 12:17 PDT, Filip Pizlo
mark.lam: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews200 for win-future (12.79 MB, application/zip)
2018-05-05 16:47 PDT, EWS Watchlist
no flags
Filip Pizlo
Comment 1 2018-05-05 12:17:53 PDT
Created attachment 339654 [details] the patch
EWS Watchlist
Comment 2 2018-05-05 16:47:27 PDT
Comment on attachment 339654 [details] the patch Attachment 339654 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/7579998 New failing tests: http/tests/security/video-poster-cross-origin-crash2.html
EWS Watchlist
Comment 3 2018-05-05 16:47:38 PDT
Created attachment 339658 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Mark Lam
Comment 4 2018-05-07 15:01:33 PDT
Comment on attachment 339654 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=339654&action=review > Source/JavaScriptCore/ChangeLog:15 > + if it's getting the merged valuesAtTail or just some correct answer to for valuesAtTail. typo: /to for/for/
Filip Pizlo
Comment 5 2018-05-07 17:05:29 PDT
Radar WebKit Bug Importer
Comment 6 2018-05-07 17:07:37 PDT
Note You need to log in before you can comment on or make changes to this bug.